[UI] - Ajustes no css da aplicação
- Adicionado padding para a exibição do conteúdo das páginas;
- Alinhado os botões de ações dos forms a direita da table

--- a/gerenciador-alunos-ui/src/app/app.component.html
+++ b/gerenciador-alunos-ui/src/app/app.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar color="primary">
   <span>Gerenciador de Alunos</span>
 </mat-toolbar>
-<router-outlet></router-outlet>
+
+<div class="content-wrapper">
+  <router-outlet></router-outlet>
+</div>
