Renomeado as referencias de alunos > pessoas

--- a/gerenciador-alunos-ui/src/app/pessoas/pessoa-form/pessoa-form.component.html
+++ b/gerenciador-alunos-ui/src/app/pessoas/pessoa-form/pessoa-form.component.html
@@ -1,18 +1,18 @@
 <mat-card>
   <mat-card-content>
-    <mat-card-title>Aluno</mat-card-title>
+    <mat-card-title>Pessoa</mat-card-title>
 
     <br>
 
     <form [formGroup]="formulario">
       <mat-form-field appearance="fill">
         <mat-label>Nome</mat-label>
-        <input matInput type="text" id="input-nome" formControlName="nome" placeholder="Nome do aluno" required/>
+        <input matInput type="text" id="input-nome" formControlName="nome" placeholder="Nome" required/>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Situação</mat-label>
-        <input matInput type="text" id="input-situacao" formControlName="situacao" placeholder="Situação do aluno" required/>
+        <input matInput type="text" id="input-situacao" formControlName="situacao" placeholder="Situação" required/>
       </mat-form-field>
 
       <p></p>
