--- a/gerenciador-alunos-ui/src/app/pessoas/pessoa-list/pessoa-list.component.html
+++ b/gerenciador-alunos-ui/src/app/pessoas/pessoa-list/pessoa-list.component.html
@@ -11,36 +11,51 @@
     <br>
 
     <!--div *ngIf="pessoas$ | async as pessoas; else loading"-->
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z3">
+      <mat-table [dataSource]="dataSource" class="table-responsive mat-elevation-z3">
         <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef>Nome</th>
-          <td mat-cell *matCellDef="let aluno">{{ aluno.nome }}</td>
+          <mat-header-cell *matHeaderCellDef>Nome</mat-header-cell>
+          <mat-cell *matCellDef="let pessoa">{{ pessoa.nome }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+          <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
+          <mat-cell *matCellDef="let pessoa">{{ pessoa.email }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="telefone1">
+          <mat-header-cell *matHeaderCellDef>Tel. Fixo</mat-header-cell>
+          <mat-cell *matCellDef="let pessoa">{{ pessoa.telefone1 }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="telefone2">
+          <mat-header-cell *matHeaderCellDef>Tel. Celular</mat-header-cell>
+          <mat-cell *matCellDef="let pessoa">{{ pessoa.telefone2 }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="situacao">
-          <th mat-header-cell *matHeaderCellDef>Situação</th>
-          <td mat-cell *matCellDef="let aluno">{{ aluno.situacao }}</td>
+          <mat-header-cell *matHeaderCellDef>Situação</mat-header-cell>
+          <mat-cell *matCellDef="let pessoa">{{ pessoa.situacao }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="acoes">
-          <th mat-header-cell *matHeaderCellDef></th>
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
 
-          <td mat-cell *matCellDef="let aluno" class="action-link col-acoes">
-            <button mat-icon-button color="primary" (click)="visualizar(aluno, false)">
+          <mat-cell *matCellDef="let pessoa" class="action-link col-acoes">
+            <button mat-icon-button color="primary" (click)="visualizar(pessoa, false)">
               <span class="material-icons">visibility</span>
             </button>
-            <button mat-icon-button color="primary" (click)="visualizar(aluno, true)">
+            <button mat-icon-button color="primary" (click)="visualizar(pessoa, true)">
               <span class="material-icons">edit</span>
             </button>
-            <button mat-icon-button color="primary" (click)="excluir(aluno)">
+            <button mat-icon-button color="primary" (click)="excluir(pessoa)">
               <span class="material-icons">restore_from_trash</span>
             </button>
-          </td>
+          </mat-cell>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+      </mat-table>
     <!--/div-->
   </mat-card-content>
 
