[UI] - Desenvolvido o CRUD de vendas

--- a/gerenciador-alunos-ui/src/app/app.component.html
+++ b/gerenciador-alunos-ui/src/app/app.component.html
@@ -32,6 +32,10 @@
       <mat-icon>receipt</mat-icon>
       <span>Produtos</span>
     </button>
+    <button mat-button class="menu-button" [routerLink]="['vendas']">
+      <mat-icon>attach_money</mat-icon>
+      <span>Vendas</span>
+    </button>
     <button mat-button class="menu-button">
       <mat-icon>info</mat-icon>
       <span>Sobre</span>
