--- a/gerenciador-alunos-ui/src/app/login/login/login.component.html
+++ b/gerenciador-alunos-ui/src/app/login/login/login.component.html
@@ -1,1 +1,44 @@
-<p>login works!</p>
+<div class="container-fluid ps-md-0">
+  <div class="row g-0">
+    <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
+    <div class="col-md-8 col-lg-6">
+      <div class="login d-flex align-items-center py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9 col-lg-8 mx-auto">
+              <h1 class="login-heading mb-4">Bem vindo!</h1>
+
+              <form [formGroup]="formulario">
+                <div class="form-floating mb-3">
+                  <input type="email" class="form-control" id="floatingInput" placeholder="Usuário"
+                    formControlName="username" autocomplete="on">
+                  <label class="form-label" for="floatingInput">Usuário</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input type="password" class="form-control" id="floatingPassword" placeholder="Senha"
+                    formControlName="password" autocomplete="current-password">
+                  <label class="form-label" for="floatingPassword">Senha</label>
+                </div>
+
+                <div class="form-check mb-3">
+                  <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
+                  <label class="form-check-label" for="rememberPasswordCheck">
+                    Mantenha-me conectado!
+                  </label>
+                </div>
+
+                <div class="d-grid">
+                  <button class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit"
+                    (click)="login()">Entrar</button>
+                  <div class="text-center">
+                    <a class="small" href="#">Esqueceu sua senha?</a>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
