--- a/gerenciador-alunos-ui/src/app/menu/menu/menu.component.html
+++ b/gerenciador-alunos-ui/src/app/menu/menu/menu.component.html
@@ -43,7 +43,7 @@
 
     <mat-divider class="mat-divider-margin-top"></mat-divider>
 
-    <button mat-button class="menu-button">
+    <button mat-button class="menu-button" (click)="logout()">
       <mat-icon>exit_to_app</mat-icon>
       <span>Sair</span>
     </button>
