--- a/gerenciador-alunos-ui/src/app/menu/menu/menu.component.html
+++ b/gerenciador-alunos-ui/src/app/menu/menu/menu.component.html
@@ -15,8 +15,8 @@
   <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
     <img class="avatar mat-elevation-z8" src="assets/imgs/avatar-profile.png" />
 
-    <h4 class="name">John Smith</h4>
-    <p class="designation">Software Engineer</p>
+    <h4 class="name">{{ usuarioLogado.username }}</h4>
+    <p class="designation">{{ usuarioLogado.funcao }}</p>
 
     <mat-divider></mat-divider>
 
